<resources>
    <string name="app_name">Single-N-Back app</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="number_of_events">Number of events: </string>
    <string name="value_of_n">Value of N: </string>
    <string name="selected_stimuli">Selected: </string>
    <string name="time_between_events">Time between events: </string>
    <string name="audio_btn_text">Audio match</string>
    <string name="visual_btn_text">Position match</string>
    <string name="start_btn_text">Start </string>
    <string name="restart_btn_text">Restart </string>
    <string name="score_text">Score:</string>
</resources>