<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <se.kth.mohosm.ttt.view.SquareLayout
        android:id="@+id/squareLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/layout_border_bkg"
        android:orientation="vertical"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- images of the grid boxes -->
            <!-- using tags to identify in activity -->
            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="0" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_boarder_bkg"
                android:padding="20dp"
                android:tag="8" />
        </LinearLayout>

    </se.kth.mohosm.ttt.view.SquareLayout>

    <!-- Styling for the button is defined in res/drawable/rounded_green_bkg
     Use AppCompatButton, instead of Button, for this styling to take effect -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/position_match_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_blue_bkg"
        android:text="@string/visual_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squareLayout"
        app:layout_constraintVertical_bias="0.257" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue_bkg"
        android:text="@string/restart_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squareLayout"
        app:layout_constraintVertical_bias="0.514" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_blue_bkg"
        android:text="@string/start_btn_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/audio_match_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_blue_bkg"
        android:text="@string/audio_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squareLayout"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/score_text"
        app:layout_constraintStart_toEndOf="@id/position_match_btn"
        app:layout_constraintEnd_toStartOf="@+id/audio_match_btn"
        app:layout_constraintBottom_toTopOf="@id/restart_btn" />

    <TextView
        android:id="@+id/curr_nr_events_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/number_of_events"

        app:layout_constraintBottom_toTopOf="@+id/time_events_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_events_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="5dp"
        android:text="@string/time_between_events"
        app:layout_constraintBottom_toTopOf="@+id/squareLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curr_nr_events_text" />

    <TextView
        android:id="@+id/sel_stimuli_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/selected_stimuli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/curr_nr_events_text"/>

    <TextView
        android:id="@+id/value_of_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="5dp"
        android:text="@string/value_of_n"
        app:layout_constraintBottom_toTopOf="@+id/squareLayout"
        app:layout_constraintStart_toEndOf="@+id/time_events_text"
        app:layout_constraintTop_toBottomOf="@+id/sel_stimuli_text" />


</androidx.constraintlayout.widget.ConstraintLayout>